--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                     <p>Veja como é fácil começar a proteger sua família. Siga o vídeo e instale em menos de 5 minutos.</p>
                 </div>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" title="Tutorial de Instalação - Família Segura" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://ia601001.us.archive.org/6/items/rica-games-epoca-boa-edit-sad/Rica%20games%20%C3%A9poca%20boa%E2%A7%B8Edit%20sad.mp4?cnt=0" title="Tutorial de Instalação - Família Segura" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="steps-guide">
                     <div class="step-card">
