--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@ BAIXAR AGORA <i class="fas fa-download"></i>
 
 <div class="video-container">
 
-<iframe src="https://ia601001.us.archive.org/6/items/rica-games-epoca-boa-edit-sad/Rica%20games%20%C3%A9poca%20boa%E2%A7%B8Edit%20sad.mp4?cnt=0" title="Tutorial de Instalação - Família Segura" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://ia800306.us.archive.org/9/items/202509231302/202509231302.ia.mp4" title="Tutorial de Instalação - Família Segura" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </div>
 
