--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <link rel="icon" href="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-120 -150 240 350'%3e%3cdefs%3e%3clinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3e%3cstop offset='0%25' style='stop-color:%232563eb'/%3e%3cstop offset='50%25' style='stop-color:%231d4ed8'/%3e%3cstop offset='100%25' style='stop-color:%231e40af'/%3e%3c/linearGradient%3e%3c/defs%3e%3cpath fill='url(%23g)' d='M 0 -100 L -70 -85 L -100 -30 L -100 70 C -100 130, -70 170, 0 190 C 70 170, 100 130, 100 70 L 100 -30 L 70 -85 Z'/%3e%3cg transform='translate(0, 80) scale(0.6)'%3e%3crect x='-12' y='0' width='24' height='30' rx='6' fill='white'/%3e%3cpath d='M -8 0 C -8 -12, -4 -18, 0 -18 C 4 -18, 8 -12, 8 0' fill='none' stroke='white' stroke-width='3'/%3e%3ccircle cx='0' cy='12' r='4' fill='url(%23g)'/%3e%3c/g%3e%3c/svg%3e">
+
     <style>
         :root {
             --primary-blue: #2563eb;
@@ -81,12 +84,10 @@
             text-decoration: none;
         }
 
-        .logo i {
-            font-size: 30px;
-            background: var(--gradient);
-            background-clip: text;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+        /* --- CSS ATUALIZADO PARA O SVG --- */
+        .logo svg {
+            width: 30px;
+            height: 30px;
         }
 
         .nav-links {
@@ -566,7 +567,21 @@
         <div class="container">
             <nav>
                 <a href="#" class="logo">
-                    <i class="fas fa-shield-alt"></i>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="-120 -150 240 350">
+                        <defs>
+                            <linearGradient id="blueGradientLogo" x1="0%" y1="0%" x2="100%" y2="100%">
+                                <stop offset="0%" style="stop-color:#2563eb;stop-opacity:1" />
+                                <stop offset="50%" style="stop-color:#1d4ed8;stop-opacity:1" />
+                                <stop offset="100%" style="stop-color:#1e40af;stop-opacity:1" />
+                            </linearGradient>
+                        </defs>
+                        <path fill="url(#blueGradientLogo)" d="M 0 -100 L -70 -85 L -100 -30 L -100 70 C -100 130, -70 170, 0 190 C 70 170, 100 130, 100 70 L 100 -30 L 70 -85 Z"/>
+                        <g transform="translate(0, 80) scale(0.6)">
+                            <rect x="-12" y="0" width="24" height="30" rx="6" fill="white"/>
+                            <path d="M -8 0 C -8 -12, -4 -18, 0 -18 C 4 -18, 8 -12, 8 0" fill="none" stroke="white" stroke-width="3"/>
+                            <circle cx="0" cy="12" r="4" fill="url(#blueGradientLogo)"/>
+                        </g>
+                    </svg>
                     <span>Família Segura</span>
                 </a>
                 <ul class="nav-links">
@@ -745,7 +760,6 @@
         </div>
     </footer>
 
-    <!-- Floating Buttons -->
     <a href="https://wa.me/5511974902717?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20do%20aplicativo%20espi%C3%A3o." class="floating-button whatsapp-anchor" target="_blank" aria-label="Fale conosco no WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
@@ -753,7 +767,6 @@
         <i class="fas fa-play"></i>
     </a>
 
-    <!-- Video Modal -->
     <div class="video-modal" id="videoModal">
         <div class="video-modal-content">
             <button class="close-modal" id="closeModal"><i class="fas fa-times"></i></button>
