--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@ src="https://www.facebook.com/tr?id=1543756733255957&ev=PageView&noscript=1"
                 <p>Baixe agora e tenha acesso imediato a todas as funcionalidades premium. A verdade e a sua paz de espírito estão a um clique de distância.</p>
                 
                 <a 
-                    href="https://anonymfile.com/f/9b815cae-f359-410e-99ee-11ed087015d6" 
+                    href="https://upnow-prod.ff45e40d1a1c8f7e7de4e976d0c9e555.r2.cloudflarestorage.com/fjcICxBUESdd5LWByyjCQV0dSyi1/8405fd2a-55b4-4334-9a1e-7a235be7c0de?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=2f488bd324502ec20fee5b40e9c9ed39%2F20250926%2Fauto%2Fs3%2Faws4_request&X-Amz-Date=20250926T073836Z&X-Amz-Expires=43200&X-Amz-Signature=9744b5fde1efb65369ec095363697838a0ab5d64390e62adff5005bb9b02adf9&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3D%22Familia%20Segura.apk%22" 
                     class="cta-button" 
                     onclick="trackAndLogDownload();">
                     QUERO MINHA SEGURANÇA AGORA <i class="fas fa-shield-alt"></i>
