--- a/index.html
+++ b/index.html
@@ -698,168 +698,4 @@ src="https://www.facebook.com/tr?id=1543756733255957&ev=PageView&noscript=1"
                         <p>Clique no botão de download e adquira o aplicativo de forma segura.</p>
                     </div>
                     <div class="step-card">
-                        <div class="step-icon"><i class="fas fa-mobile-alt"></i></div>
-                        <h3>2. Instale no Dispositivo</h3>
-                        <p>Siga as instruções do vídeo para uma instalação rápida e invisível no celular alvo.</p>
-                    </div>
-                    <div class="step-card">
-                        <div class="step-icon"><i class="fas fa-desktop"></i></div>
-                        <h3>3. Monitore Remotamente</h3>
-                        <p>Acesse seu painel online de qualquer lugar e veja todas as informações em tempo real.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="comparison" id="comparativo">
-            <div class="container">
-                <div class="section-title">
-                    <h2>Vantagens Exclusivas</h2>
-                    <p>Veja por que somos a escolha número 1 em tecnologia de monitoramento familiar.</p>
-                </div>
-                <table class="comparison-table">
-                    <thead>
-                        <tr>
-                            <th>Recurso Exclusivo</th>
-                            <th>Família Segura</th>
-                            <th>Concorrentes</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Modo 100% Invisível e Indetectável</td>
-                            <td><i class="fas fa-check-circle check"></i></td>
-                            <td><i class="fas fa-times-circle cross"></i></td>
-                        </tr>
-                        <tr>
-                            <td>Acesso a Mensagens Já Apagadas</td>
-                            <td><i class="fas fa-check-circle check"></i></td>
-                            <td><i class="fas fa-times-circle cross"></i></td>
-                        </tr>
-                        <tr>
-                            <td>Ativação Remota da Câmera</td>
-                            <td><i class="fas fa-check-circle check"></i></td>
-                            <td>Limitado / Não Possui</td>
-                        </tr>
-                        <tr>
-                            <td>Gravação de Chamadas Telefônicas</td>
-                            <td><i class="fas fa-check-circle check"></i></td>
-                            <td><i class="fas fa-times-circle cross"></i></td>
-                        </tr>
-                        <tr>
-                            <td>Suporte Humanizado em Português 24/7</td>
-                            <td><i class="fas fa-check-circle check"></i></td>
-                            <td>Suporte Lento / Em Inglês</td>
-                        </tr>
-                        <tr>
-                            <td>Preço Justo e Pagamento Único</td>
-                            <td><i class="fas fa-check-circle check"></i></td>
-                            <td>Assinaturas Caras</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
-
-        <section class="testimonials" id="testimonials">
-            <div class="container">
-                <div class="section-title">
-                    <h2>O Que Dizem Nossos Clientes</h2>
-                    <p>Histórias reais de pessoas que recuperaram a confiança e a segurança em seus relacionamentos.</p>
-                </div>
-                <div class="testimonials-grid">
-                    <div class="testimonial-card">
-                        <p>"Esse aplicativo foi um divisor de águas. Me trouxe a paz de espírito que eu não tinha há anos e me ajudou a proteger minha família de verdade."</p>
-                        <div class="testimonial-author">
-                            <img src="https://i.pravatar.cc/50?img=1" alt="Foto da Cliente Carolina">
-                            <span class="author-info">Carolina S. - São Paulo, SP</span>
-                        </div>
-                    </div>
-                    <div class="testimonial-card">
-                        <p>"Eu estava desconfiado e vivia ansioso. Com o Família Segura, descobri a verdade e consegui resolver um problema sério antes que fosse tarde demais. Recomendo!"</p>
-                        <div class="testimonial-author">
-                            <img src="https://i.pravatar.cc/50?img=2" alt="Foto do Cliente Ricardo">
-                            <span class="author-info">Ricardo M. - Rio de Janeiro, RJ</span>
-                        </div>
-                    </div>
-                    <div class="testimonial-card">
-                        <p>"Simplesmente o melhor e mais discreto que já usei. A instalação é fácil e o suporte ao cliente é excelente. Valeu cada centavo pela minha tranquilidade."</p>
-                        <div class="testimonial-author">
-                            <img src="https://i.pravatar.cc/50?img=3" alt="Foto da Cliente Amanda">
-                            <span class="author-info">Amanda T. - Belo Horizonte, MG</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="final-cta" id="download">
-            <div class="container">
-                <h2>Não Deixe a Dúvida e a Insegurança Vencerem</h2>
-                <p>Baixe agora e tenha acesso imediato a todas as funcionalidades premium. A verdade e a sua paz de espírito estão a um clique de distância.</p>
-                
-                <a 
-                    href="https://upnow-prod.ff45e40d1a1c8f7e7de4e976d0c9e555.r2.cloudflarestorage.com/fjcICxBUESdd5LWByyjCQV0dSyi1/8405fd2a-55b4-4334-9a1e-7a235be7c0de?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=2f488bd324502ec20fee5b40e9c9ed39%2F20250926%2Fauto%2Fs3%2Faws4_request&X-Amz-Date=20250926T073836Z&X-Amz-Expires=43200&X-Amz-Signature=9744b5fde1efb65369ec095363697838a0ab5d64390e62adff5005bb9b02adf9&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3D%22Familia%20Segura.apk%22" 
-                    class="cta-button" 
-                    onclick="trackAndLogDownload();">
-                    QUERO MINHA SEGURANÇA AGORA <i class="fas fa-shield-alt"></i>
-                </a>
-                </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Família Segura. Todos os direitos reservados.</p>
-        </div>
-    </footer>
-
-    <a href="https://wa.me/55119" class="floating-button whatsapp-anchor" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i></a>
-    <a href="javascript:void(0);" onclick="document.querySelector('.video-modal').classList.add('active');" class="floating-button video-anchor"><i class="fas fa-play"></i></a>
-    
-    <div class="video-modal" onclick="if (event.target === this) this.classList.remove('active');">
-        <div class="video-modal-content">
-            <button class="close-modal" onclick="document.querySelector('.video-modal').classList.remove('active');">&times;</button>
-            <iframe src="https://ia800306.us.archive.org/9/items/202509231302/202509231302.ia.mp4" title="Tutorial de Instalação - Família Segura" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-    </div>
-
-    <script>
-        function trackAndLogDownload() {
-            // 1. DISPARA O EVENTO PARA O META PIXEL (FACEBOOK)
-            // Evento: 'Download', Parâmetros Customizados: app_name e download_platform
-            fbq('track', 'Download', {
-                app_name: 'Família Segura', 
-                download_platform: 'android_ios'
-            });
-
-            // 2. LOG NO CONSOLE PARA CONFIRMAÇÃO
-            console.log("---------------------------------------");
-            console.log("✅ Evento 'Download' disparado com sucesso!");
-            console.log("Parâmetros Customizados Enviados: { app_name: 'Família Segura', download_platform: 'android_ios' }");
-            console.log("Verifique o Gerenciador de Eventos do Meta (Facebook) para confirmação final.");
-            console.log("---------------------------------------");
-        }
-    </script>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const menuToggle = document.querySelector('.menu-toggle');
-            const navLinks = document.querySelector('.nav-links');
-
-            if (menuToggle && navLinks) {
-                menuToggle.addEventListener('click', () => {
-                    navLinks.classList.toggle('active');
-                });
-
-                // Fecha o menu ao clicar em um link
-                navLinks.querySelectorAll('a').forEach(link => {
-                    link.addEventListener('click', () => {
-                        navLinks.classList.remove('active');
-                    });
-                });
-            }
-        });
-    </script>
-</body>
-</html>
+                        <div class="step-icon"><i class="fas fa-mobile-alt
