--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@ src="https://www.facebook.com/tr?id=1543756733255957&ev=PageView&noscript=1"
                 <p>Baixe agora e tenha acesso imediato a todas as funcionalidades premium. A verdade e a sua paz de espírito estão a um clique de distância.</p>
                 
                 <a 
-                    href="https://upnow-prod.ff45e40d1a1c8f7e7de4e976d0c9e555.r2.cloudflarestorage.com/fjcICxBUESdd5L"
+                    href="https://fs23.fex.net/download/5658438662?fs_id=23&storage_file_id=4550151717"
                     class="cta-button download-link"
                     id="final-download-button"
                 >
